--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "npm": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "sort-objects-array": "^1.7.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
